# coursewrk2

./: .flake8  README.md  config.py  main.py  pyproject.toml
data/: vacancies.json  vacansies.json
src/: API_HH.py  abstract_container.py  api_client.py  files.py  functions.py  hh.py  json_saver.py  vacancy.py  vacancy_json.py  vacansies.py  vacansies_api.py  vacansies_file.py  vacansies_filter.py  vacansies_list.py
tests/: conftest.py  test_API_HH.py  test_functions.py  test_hh_api_client.py  test_json_saver.py  test_vacancy.py  test_vacancy_container.py  test_vacansies.py  test_vacansies_file.py  test_vacansies_filter.py  test_vacansies_list.py
